# skyfi-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SESSION-NOTES.md  SETUP.md  SkyFi-MCP-Demo-Script.docx  SkyFi_MCP_Architecture_Decisions.docx  SkyFi_MCP_Testing_Deployment_Guide.docx  create_guide.js  fly.toml  mcp-server-req.rtf  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  adk-integration.md  ai-sdk-integration.md  anthropic-api-integration.md  claude-web-integration.md  gemini-integration.md  langchain-integration.md  openai-integration.md
docs/project/: 01-phase-requirements-map.md  02-architecture.mermaid  03-golden-evals.md  04-observability.md  05-presearch-design-document.md  06-time-estimation-tradeoffs.md  SkyFi-MCP-Server-Documentation.docx
examples/: README.md  __init__.py  demo_agent.py  simple_agent.py
examples/config/: skyfi_config.example.json
src/skyfi_mcp/: __init__.py  __main__.py  server.py
src/skyfi_mcp/api/: __init__.py  client.py  models.py
src/skyfi_mcp/auth/: __init__.py  config.py  tokens.py
src/skyfi_mcp/osm/: __init__.py  geocoder.py
src/skyfi_mcp/tools/: __init__.py
src/skyfi_mcp/webhooks/: __init__.py  store.py
tests/: __init__.py  conftest.py  test_models.py  test_server_helpers.py  test_tokens.py  test_webhooks.py
tests/golden/: __init__.py  test_eval_auth.py  test_eval_e2e.py  test_eval_models.py  test_eval_osm.py  test_eval_server.py  test_eval_tokens.py  test_eval_webhooks.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
