[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyfi-mcp"
version = "0.1.0"
description = "MCP server for SkyFi satellite imagery platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SkyFi", email = "support@skyfi.com" },
]
keywords = ["mcp", "skyfi", "satellite", "imagery", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "geopy>=2.4.0",
    "shapely>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]
demo = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
]

[project.scripts]
skyfi-mcp = "skyfi_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/skyfi/skyfi-mcp-server"
Documentation = "https://github.com/skyfi/skyfi-mcp-server#readme"
Repository = "https://github.com/skyfi/skyfi-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/skyfi_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
